# file-cycler

./: README.md  file_rotation_manager.py  pyproject.toml  test_file_rotation_manager.py
.github/workflows/: workflow.yml
src/: file_cycle.py
tests/: test_file_cycle.py
