[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FileCycle_nachash"
version = "0.0.1"
authors = [{ name = "Bo Stokholm", email = "the.one.nachash@gmail.com" }]
description = "The FileCycle is a Python library designed to manage file rotation in a specified directory. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
