[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file_cycle"
version = "0.0.2"
authors = [{ name = "Bo Stokholm", email = "the.one.nachash@gmail.com" }]
description = "The FileCycle is a Python library designed to manage file rotation in a specified directory. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mcboman/FileCycler"
"Bug Tracker" = "https://github.com/mcboman/FileCycler/issues"
